Edits to the Naskapi section

--- a/references.bib
+++ b/references.bib
@@ -107,6 +107,13 @@
   year={2017}
 }
 
+@phdthesis{jancewicz2013grammar,
+  title={Grammar enriched biliteracy: Naskapi language structures for facilitating reading in Naskapi},
+  author={Jancewicz, William},
+  year={2013},
+  school={University of North Dakota}
+}
+
 @article{dingemanse2008review,
   title={Review of {Phonology Assistant} 3.0. 1},
   author={Dingemanse, Mark},
