--- a/case-studies.tex
+++ b/case-studies.tex
@@ -85,9 +85,11 @@ In October 2017 I travelled to Kawawachikamach and informally interviewed lingui
 
 Naskapi (autonymically \sylla{naskapi} naskapi or \sylla{iyuw iyimuun} iyuw iyimuun) is a Cree language in the Algonquin family spoken in central Quebec \citep{MacKenzie-and-Jancewicz-1994}. Virtually the entire population of around 900 Naskapi live within the reservation Kawawachikamach, around 10 miles from Schefferville, QC. There is another Naskapi community on the Labrador coast, who speak another dialect known as Mushuau Innu, which is out of scope of this paper. Schefferville is only accessible by train or plane, and contains another local tribe called the Innu (which has more than 17,000 members, scattered among Quebec and Labrador\footnote{\href{https://en.wikipedia.org/wiki/Innu}{https://en.wikipedia.org/wiki/Innu}. \last{April~27}}), who live on their own reservation and who speak Montagnais or Innu-aimun, a related language. The two languages are similar, and the Naskapi youth are often diglossic in Montagnais (but the Innu are often not) \citep{macKenzie1980towards}.
 
-The Naskapi speak English as a first or second language, while the Innu speak French (and some speak three or all four languages). They moved to Kawawachikamach in the 1960s, after initially being resettled in Schefferville in the early 1950s. Some of the elders still remember being a nomadic people who followed caribou and were raised in the bush. However, half of the population is under the age of 16, and nationally the First Nations population is the largest growing population in Canada.\footnote{\href{http://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm}{http://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm}. \last{May~2}}
+The Naskapi speak English as a first or second language, while the Innu speak French (and some speak three or all four languages). They moved to Kawawachikamach in the 1980s, after initially being resettled in Schefferville in 1956. Some of the elders still remember being a nomadic people who followed caribou and were raised in the bush. However, half of the population is under the age of 16, and nationally the First Nations population is the largest growing population in Canada.\footnote{\href{http://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm}{http://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm}. \last{May~2}}
 
-All of the Naskapi speak their own language regularly, in all contexts - excepting, perhaps, digitally. In the schools, there are Naskapi-only classes held until Grade 8 \citep{llewellyn2017oral}. While there are a few social workers, teachers, and nurses who speak solely English, most jobs in Kawawachikamach are held by Naskapi. There has been a long tradition of missionaries, and almost all of the Naskapi are Protestant. At church, they use Montagnais hymnals and a Montagnais Bible.
+All of the Naskapi speak their own language regularly, in all contexts - excepting, perhaps, digitally. In the schools, there are Naskapi-only classes held until Grade 8 \citep{llewellyn2017oral}. While there are a few social workers, teachers, and nurses who speak solely English, most jobs in Kawawachikamach are held by Naskapi. There has been a long tradition of missionaries, and almost all of the Naskapi are Protestant. At church, they use contemporary Naskapi language hymnals and a Naskapi Bible \citep{naskapi-new-testament}, published in 2007. Prior to this publication, they used a Moose Cree New Testament (written in syllabics), with James Bay Cree and Moose Cree prayer books and hymnals \citep{jancewicz2013grammar}.
+
+until about 1996, there were no Naskapi scriptures, and the Naskapi used a Moose Cree (in syllabics) New Testament and James Bay Cree and Moose Cree prayer books, hymnals etc. Through the 2002-2007 years they transitioned to using an increasing amount of their own translated materials in church and school. The Naskapi New Testament was published in 2007 and since then there has been a growing use of the contemporary Naskapi language materials in their church.
 
 \subsubsection{Language vitality status}
 \label{sec:naskapi-vitality-status}
@@ -124,7 +126,7 @@ Regardless of this paucity of data, there are certainly literary resources in Na
 \subsubsection{Orthography}
 Naskapi has two scripts; Latin and the Unified Canadian Aboriginal Syllabics \citep{wals-141}, which were added to Unicode in 1999.\footnote{\href{https://www.unicode.org/standard/supported.html}{https://www.unicode.org/standard/supported.html}. \last{April~27}} The Syllabics were introduced by missionaries in the 19th century, and quickly adopted by all Cree language communities, who approached near universal literacy \citep{bennett1991cree}. In Kawawachikamach and Schefferville (and on the train there), there are many examples of writing in syllabics. As well, Naskapi has its own standard orthographical conventions for Roman characters. For instance, a macron, such as \^u is used in place of a double \emph{uu} to indicate vowel length.
 
-\citet{jancewicz2002applied} gives an insightful overview of computational technology in Naskapi. They note that Naskapi often were not involved in typesetting literature in syllabics, and that few became typists when the first syllabic typewriters were introduced. Jancewicz is particularly well placed as the author of this paper, as he and his wife were the first two missionaries sent from SIL to the Naskapi community (MacKenzie is also, as she has worked for decades with Cree communities as well as with the Naskapi). They worked with the Band Office (the local council) installing the first word processing system for syllabics, trained Naskapi speakers, and created the first Naskapi TrueType font.
+\citet{jancewicz2002applied} gives an insightful overview of computational technology in Naskapi. They note that Naskapi often were not involved in typesetting literature in syllabics, and that few became typists when the first syllabic typewriters were introduced. Jancewicz is particularly well placed as the author of this paper, as he and his wife were some of the earliest missionaries sent from SIL to the Naskapi community; MacKenzie is also, as she has worked for decades with Cree communities as well as with the Naskapi.(Two prior SIL missionaries had worked on a Naskapi grammar \citep{martens1983practical}.) Jancewicz worked with the Band Office (the local council) installing the first word processing system for syllabics, trained Naskapi speakers, and created the first Naskapi TrueType font.
 
 Jancewicz also helped to install Keyman,\footnote{\href{https://keyman.com/}{https://keyman.com/}. \last{April~27}} "a keyboarding utility ... that allowed the programming of custom keyboard input for various languages and character sets." \citep[85]{jancewicz2002applied} Keyman is now free, open source software available on GitHub.\footnote{\href{https://github.com/keymanapp}{https://github.com/keymanapp}. \last{April~27}} It allows a user to type Roman letters which are converted to the right phrase in Syllabics, and is forgiving for phonemic variants. For instance, "ju", "chu", "tchu" and so on might all be interpreted and replaced by the appropriate syllabic \sylla{co}. % TODO Ask if this is the right syllabic
 Keyman must be installed manually on each computer to use it, which reflects a considerable amount of upfront time for Jancewicz. Indeed, the importance of their support to Naskapi digital ascendancy cannot be understated (except, perhaps, by Jancewicz himself):
@@ -152,6 +154,8 @@ Naskapi does not have a complete Bible. A new testament, started in the 1970's, 
 When there is a need to come up with a new term, the elders are consulted, and they agree on an appropriate translation. For instance, {\it grill} is translated as `metal-net'. `grill' is not a  pre\"{e}xisting word in Naskapi, but `net' is, and it is easy to imagine the metaphor of a grill on which you braise meat as being a metal net. However, these decisions are not often used outside of the Bible. Likewise, when there is a term which needs to be invented at the school, the teachers there decide on an appropriate term - for instance, for situations like Halloween, where `Frankenstein' may need to be translated into a local alternative. These decisions are largely one-off, although they may be used year to year, and informally recorded in their respective domains.
 
 The linguists use the Fieldworks Language Explorer (FLEx) \footnote{\href{https://software.sil.org/fieldworks/}{https://software.sil.org/fieldworks/}. \last{April~27}} to document new linguistic terms. FLEx was developed by SIL International, and provides linguists with an out-of-the-box solution for recording linguistic terms using interlinear glossed text. It is also open source, and available on GitHub.\footnote{\href{https://github.com/sillsdev/FieldWorks}{https://github.com/sillsdev/FieldWorks}. \last{April~27}} Users can export the dictionary as a PDF (among other file formats), or export words to an online interface known as Webonary.\footnote{\href{https://www.webonary.org/configuring-the-dictionary-in-flex/}{https://www.webonary.org/configuring-the-dictionary-in-flex/}. \last{April~27}} This allows language workers to automatically create a useable, free dictionary for members of the community.
+
+As well, the Naskapi community has some resources on the Algonquian Linguistic Atlas,\footnote{\href{http://www.atlas-ling.ca/}{http://www.atlas-ling.ca/}. \last{June~16}} mentioned above in Section~\ref{subsec:mapping}, and in the related Algonquian Dictionaries Project.\footnote{\href{https://resources.atlas-ling.ca/}{https://resources.atlas-ling.ca/}. \last{June 16}} The Naskapi information in the Project comes from the NDC and the related linguists working with them (Jancowicz 2018, personal communition). The Project as a whole is funded by several Social Sciences and Humanities Research Council grants, and claims to be open source.\footnote{\href{https://resources.atlas-ling.ca/about/?lang=en}{https://resources.atlas-ling.ca/about/?lang=en}. \last{June 16}} However, I was unable to find the code available for the project on the website; it is possible that communication with the team behind it would be fruitful, but this had not been done yet at the time of this writing.
 
 Naskapi, while far smaller than Gaelic, is judged by UNESCO and others to be less endangered in part because of all of these efforts. The community speak in Naskapi daily in all areas of life, and there is ongoing work to produce more corpora and literacy materials. This year, a fibre-optic cable for high-speed internet is being laid to Kawawachikamach. Hopefully, increasing connection will allow the Naskapi to access resources that they have otherwise been unable to, which may increase digital ascendancy in the language. 
 
