--- a/references.bib
+++ b/references.bib
@@ -2021,6 +2021,13 @@ title = {Directory International cooperation programs for the protection and pro
  publisher={Palgrave Macmillan USA}
 }
 
+@misc{martens1983practical,
+  title={A Practical Grammar of the Naskapi Indian Language},
+  author={Martens, Lana and Chase, Carol},
+  year={1983},
+  publisher={Summer Institute of Linguistics}
+}
+
 @book{naskapi-new-testament,
  title={{Naskapi New Testament}},
  author="{Naskapi Development Corporation}",
